tests/invalid/pack_field_requires_generic_pack.wio
object Broken {
    pack values: i32;
}

fn Entry() -> i32 {
    return 0;
}
